--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "rust_os"
 version = "0.1.0"
-authors = ["汪院 <wangy10@chinatelecom.cn>"]
+authors = ["wy <wangy10@chinatelecom.cn>"]
 edition = "2018"
 
 [dependencies]
+bootloader = "*"
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
