--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,7 @@ test-success-exit-code = 33
 [[test]]
 name = "panic_handler"
 harness = false
+
+[[test]]
+name = "stack_overflow"
+harness = false
